CLI: Server refactored to support dynamic paths.